--- a/.github/workflows/upload-crowdin.yml
+++ b/.github/workflows/upload-crowdin.yml
@@ -1,10 +1,12 @@
-name: Crowdin Upload Action for develop
+name: Crowdin Upload Action
 
 on:
   workflow_dispatch:
   push:
     branches:
       - develop
+      - develop-exo
+      - develop-meed
 
 jobs:
   crowdin-upload:
@@ -12,6 +14,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: "extract branch name"
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
 
       - name: Crowdin push
         uses: crowdin/github-action@v1
@@ -19,7 +24,7 @@ jobs:
           upload_sources: true
           upload_translations: false
           download_translations: false
-          crowdin_branch_name: develop-gamification
+          crowdin_branch_name: ${{ steps.extract_branch.outputs.branch }}-gamification
         env:
           CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
