cleanup branches after reset

--- a/.github/workflows/download-crowdin.yml
+++ b/.github/workflows/download-crowdin.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  crowdin-download-develop:
+  reset-branch-integration-develop:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,10 +18,17 @@ jobs:
         run: |
           git fetch origin develop
           git reset origin/develop
-          git push origin -f
           git add .
           git stash
-      - name: Crowdin push
+          git push origin -f
+  crowdin-download-develop:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.CROWDIN_GITHUB_TOKEN }}
+      - name: Crowdin pull
         uses: crowdin/github-action@v1
         with:
           upload_sources: false
@@ -34,7 +41,7 @@ jobs:
           CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.CROWDIN_GITHUB_TOKEN }}
-  crowdin-download-develop-exo:
+  reset-branch-integration-develop-exo:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -44,13 +51,19 @@ jobs:
           token: ${{ secrets.CROWDIN_GITHUB_TOKEN }}
       - name: reset translation branch to develop's
         run: |
-          git fetch origin develop
           git fetch origin develop-exo
           git reset origin/develop-exo
-          git push origin -f
           git add .
           git stash
-      - name: Crowdin push
+          git push origin -f
+  crowdin-download-develop-exo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.CROWDIN_GITHUB_TOKEN }}
+      - name: Crowdin pull
         uses: crowdin/github-action@v1
         with:
           upload_sources: false
@@ -64,8 +77,7 @@ jobs:
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.CROWDIN_GITHUB_TOKEN }}
 
-
-  crowdin-download-develop-meed:
+  reset-branch-integration-meed:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -78,8 +90,17 @@ jobs:
           git fetch origin develop
           git fetch origin develop-meed
           git reset origin/develop-meed
+          git add .
+          git stash
           git push origin -f
 
+  crowdin-download-develop-meed:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.CROWDIN_GITHUB_TOKEN }}
       - name: Crowdin push
         uses: crowdin/github-action@v1
         with:
