--- a/.github/workflows/download-crowdin.yml
+++ b/.github/workflows/download-crowdin.yml
@@ -115,7 +115,7 @@ jobs:
           localization_branch_name: integration/6.5.x-exo-translation
           create_pull_request: false
           skip_ref_checkout: true
-          download_translations_args: '-l ar -l aro -l az -l ca -l ceb -l co -l cs -l de -l el -l en -l es-ES -l eu -l fa -l fi
+          download_translations_args: '-l ar -l ar-O -l az -l ca -l ceb -l co -l cs -l de -l el -l en -l es-ES -l eu -l fa -l fi
            -l fr -l hi -l hu -l id -l it -l ja -l kab -l ko -l lt -l ms -l nl -l no -l pcm -l pl -l pt-BR -l pt-PT -l ro -l ru
            -l sk -l sl -l sq -l sv-SE -l th -l tl -l tr -l uk -l ur-IN -l vi -l zh-CN -l zh-TW'
         env:
