upload on stable/2.5.x

--- a/.github/workflows/upload-crowdin-branches.yml
+++ b/.github/workflows/upload-crowdin-branches.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - develop-exo
       - develop-meed
-      - stable/${{vars.CROWDIN_MAINTENANCE_EXO_VERSION}}
+      - stable/2.5.x-exo
 
 jobs:
   check-translation-change:
