test with wildcard

--- a/.github/workflows/upload-crowdin-branches.yml
+++ b/.github/workflows/upload-crowdin-branches.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - develop-exo
       - develop-meed
-      - stable/2.5.x-exo
+      - stable/*
 
 jobs:
   check-translation-change:
